--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,15 @@ th {
     right: 0;
 }
 
+.gap-line {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  background-color: red;
+  z-index: 0;
+}
+
 input[type="number"] {
     width: 60px;
 }
