--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,3 +86,10 @@ th {
 input[type="number"] {
     width: 60px;
 }
+
+.tab-content {
+  display: none;
+}
+.tab-content.active {
+  display: block;
+}
